21 August 2008
+ XMLParser fixes.
+ Moved errorDefines from Init to Core.
+ Removed crutch function from Init.
+ Small error check added to Database.
+ Error - added error check to prevent endless loop
+ Text - Removed php 4 function
+ Setup
  o Added server check to beginning of installation
  o Switched off the general config step.


13 August 2008
+ Key - Changed private variables to public
+ Link - added setOnClick

12 August 2008
+ Commented out Function.php inclusion since php 5 is standard.
+ Added rel="nofollow" to bb encoding [url] tag
+ Link
  o Added new setNoFollow function
  o Added setRewrite and setAnchor functions.
+ Time - changed getDTTime to return gmtime
+ Forward - a single variable after the module is considered to be an 'id'
+ Updated: conf/smiles.pak, images/core/smilies/rofl.gif

8 August 2008
+ Updated pick date functionality of js_calendar. Wasn't forwarding
  properly.
+ Updated js calendar script ot most recent version.
+ DBPager - added method to disable auto creation of sort icons.
+ Database - getObjects calls __construct instead of the class named
  function to conform with php 5.
+ Removed auto_load from Init.php. Pear created some goofy errors with
  it.
+ Text - parseInput has a third parameter that allows you to avoid
  relative url changes.
+ sub and sup added to allowed tags
+ Release version changed to 2.0.0

+ Updated files:
javascript/js_calendar/dhtmlgoodies_calendar/dhtmlgoodies_calendar.js
javascript/js_calendar/phpws_addon.js
conf/text_settings.php
conf/version.php

1 August 2008
+ Added iframe, embed, and object to allowed tags in text_settings.php
+ Deleted Crutch_Form.php. Not used.
+ Started using php 5 for method and member definition
+ DBPager - changed various links to use Text methods instead of raw
  sprintf calls
+ PHPWS_Error - removed crutch function.
+ PHPWS_Form - removed underscore from some public member names
+ Init - added autoload function.